public class CameraAnimatorParameters
{
    public static readonly string ShowConveyor = nameof(ShowConveyor);
    public static readonly string ShowCustomer = nameof(ShowCustomer);
    public static readonly string ShowPlayer = nameof(ShowPlayer);
    public static readonly string ShowMoneyZone = nameof(ShowMoneyZone);
    public static readonly string ShowItemProducer = nameof(ShowItemProducer);
    public static readonly string ShowBuyZone = nameof(ShowBuyZone);
    public static readonly string ShowGrave = nameof(ShowGrave);
    public static readonly string ShowSecondCustomer = nameof(ShowSecondCustomer);
}
